[How to Start] Fix style and spacing Refs #4256

--- a/assets/Sass/start.sass
+++ b/assets/Sass/start.sass
@@ -7,24 +7,26 @@
 
   .square-black
     font-family: $font-general
-    width: 3rem
+    min-width: 3rem
     height: 3rem
     font-size: 2rem
     background: $color-black-bg
     text-align: center
     display: inline-block
+    margin-top: -5px
 
   .title-text
     font-family: $font-general-bold
     font-size: 1.5rem
     margin-left: 0
     color: $color-text
+    display: flex
     *
       color: white
 
   .description-text
     font-family: $font-general
-    margin-left: 3rem
+    margin-left: 4.1rem
     word-break: break-word
 
   a
@@ -34,8 +36,10 @@
     margin: 3.5em 0
 
   code
+    font-family: $font-general
     background: $color-code-background
     color: $color-text
+    font-size: 1em
     padding: 0.7rem
     display: block
     width: fit-content
@@ -45,6 +49,6 @@
 
   img
     width: 100%
-    max-width: 1200px
+    max-width: 700px
     min-width: 50px
     height: auto
